mash: Make the power button shut the system down.

Now that ash::Shell is instantiated in mash, let
LockStateController ask powerd to shut the system down when
requested. Also fix various crashes in LockStateController
due to CursorManager being uninitialized in mash and
remove WmShell::RequestShutdown() in favor of calling
LockStateController::RequestShutdown() directly.

BUG=679062,632187

Review-Url: https://codereview.chromium.org/2652093002
Cr-Commit-Position: refs/heads/master@{#445962}

Former-commit-id: c6250a0ced3c3b8d41214af299502af4dfefd850