ash/aura/wm_shell_aura.h
@@ -77,7 +77,6 @@ class ASH_EXPORT WmShellAura : public WmShell,
   void AddPointerWatcher(views::PointerWatcher* watcher,
                          views::PointerWatcherEventTypes events) override;
   void RemovePointerWatcher(views::PointerWatcher* watcher) override;
-  void RequestShutdown() override;
   bool IsTouchDown() override;
   void ToggleIgnoreExternalKeyboard() override;
   void SetLaserPointerEnabled(bool enabled) override;
